<?xml version="1.0"?>
<package>
	<name>ros_tutorials_action</name>
	<version>0.1.0</version>
	<description>ROS tutorial package to learn the action</description>
	<license>BSD</license>
	<author>Melonee Wise</author>
	<maintainer email="pyo@robotis.com">pyo</maintainer>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<export></export>
</package>

